istio-gateway-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  
  name: sonar-gateway
  namespace: default
  
spec:
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  
  name: sonar-virtualservice
  namespace: default
  
spec:
  gateways:
  - sonar-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /
    route:
    - destination:
        host: localhostsonar1-sonarqube.svc.cluster.local
        port:
          number: 9000
